--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
         password: '${{ steps.auth.outputs.access_token }}'
     - name: Terraform Init
       id: init
-      run: terraform init -backend-config=env/backend.tfvars
+      run: cd cicd_bootstrap && init -backend-config=../env/backend.tfvars
     - name: Terraform Apply
       id: apply
       run: terraform apply -no-color -var-file env/project.tfvars -auto-approve
